--- a/scss/_variables/_colors.scss
+++ b/scss/_variables/_colors.scss
@@ -1,6 +1,7 @@
 // colores de la pagina
-$color-primary: #006bff;
-$color-secondary: #fff;
+// $color-primary: #006bff;
+$color-primary: linear-gradient(45deg, #006bff, #ebebeb);
+$color-secondary: #2a303c;
 $color-terciary: #3d3d3d;
 
 // colores de botones
