--- a/scss/_partials/_contact.scss
+++ b/scss/_partials/_contact.scss
@@ -1,7 +1,8 @@
 .contact {
   margin: 15rem 0;
+
   h2 {
-    padding-left: 3em;
+    padding-left: 1.7em;
     font-size: 3rem;
     margin: 3rem 0;
     text-shadow: -4px 2px #610082;
@@ -46,21 +47,21 @@
       margin-bottom: 2rem;
       background-color: transparent;
       border: none;
-      border-bottom: 1px solid $color-secondary;
+      border-bottom: 1px solid #fff;;
       outline: none;
-      color: $color-secondary;
+      color: #fff;
 
       &::placeholder {
-        color: $color-secondary;
+        color: #fff;
       }
     }
     textarea {
       width: 100%;
       background: none;
-      color: $color-secondary;
+      color: #fff;
       outline: none;
       border: none;
-      border-bottom: 1px solid $color-secondary;
+      border-bottom: 1px solid #fff;
       margin-bottom: 2rem;
       max-width: 100%;
       max-height: 10.25rem;
@@ -68,7 +69,7 @@
       min-width: 100%;
 
       &::placeholder {
-        color: $color-secondary;
+        color: #fff;
       }
     }
   }
@@ -102,9 +103,9 @@
     button {
       padding: 1em 4em;
       font-size: .9rem;
-      font-family: 'Raleway', sans-serif, serif;
-      font-weight: bolder;
+      font-weight: 800;
       letter-spacing: 5px;
+      color: #ffffff;
     }
   }
 
@@ -123,6 +124,7 @@ span i {
 }
 .enviando {
   margin-bottom: 0 !important;
+  color: #fff;
 }
 .hide-loader {
   display: none;
@@ -132,7 +134,7 @@ span i {
 }
 .show-mensaje {
   display: block;
-  width: 70%;
+  width: 50%;
   margin: auto;
   text-align: center;
   border-radius: 8px;
