--- a/scss/_partials/_header.scss
+++ b/scss/_partials/_header.scss
@@ -4,12 +4,22 @@
   position: fixed;
   z-index: $z-fixed;
   top: 0;
+
+/*   background: rgba( 255, 255, 255, 0.25 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 ); */
+
+
   .main-menu {
     height: 4rem;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 0 5em;
+    color: #0a0189;
 
     &__list {
       display: flex;
@@ -19,9 +29,9 @@
       padding: 0 2em;
     }
     &__link {
-      font-family: 'Josefin Sans', sans-serif, serif;
       text-transform: uppercase;
-      color: $color-secondary;
+      color: rgb(31 19 209);
+      font-weight: 600;
     }
   }
   
@@ -39,9 +49,11 @@
     position: absolute;
     top: 5%;
     left: 43%;
-    width: 50px;
+    width: 80px;
+    font-size: 40px;
     cursor: pointer;
     transition: all .3s ease-out;
+    color: #ffffff;
 
     &:hover {
       transform: scale(1.3);
@@ -65,23 +77,30 @@
       height: 2rem;
       border-radius: .1rem;
       // #24e4dc
-      background: linear-gradient(#68D2FF 20%, transparent 20%,
-      transparent 40%,#68D2FF 40%, #68D2FF 60%, transparent 60%,
-      transparent 80%,#68D2FF 80%, #68D2FF 100%);
+      background: linear-gradient(#3b79ec 20%, transparent 20%,
+      transparent 40%,#3b79ec 40%, #3b79ec 60%, transparent 60%,
+      transparent 80%,#3b79ec 80%, #3b79ec 100%);
       cursor: pointer;
     }
     a {
-      color: #fff;
+      color: #ffffff;
     }
 
     .main-menu {
       position: fixed;
       width: 100vw;
       height: 100vh;
-      background-color: rgb(0, 132, 255);
+      // background: linear-gradient(45deg, #006bff, #f6f6f6);
       text-align: center;
       top: -200vh;
       // overflow-y: scroll;
+
+      background: #65baffd0;
+      box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+      backdrop-filter: blur( 4px );
+      -webkit-backdrop-filter: blur( 4px );
+      border-radius: 10px;
+      border: 1px solid rgba( 255, 255, 255, 0.18 );
       
       ul {
         margin: 30% 0;
