--- a/scss/_partials/_portfolio.scss
+++ b/scss/_partials/_portfolio.scss
@@ -90,7 +90,7 @@
       padding: 1em 2em;
       margin-bottom: .5rem;
       .tag {
-        background: linear-gradient(90deg, rgba(74,3,99,1) 0%, rgba(136,17,177,1) 50%, rgba(178,24,232,1) 100%);
+        background: linear-gradient(90deg, rgb(90, 0, 122) 0%, rgba(136,17,177,1) 50%, rgba(178,24,232,1) 100%);
         box-shadow: rgba(31, 38, 135, 0.37) 0px 8px 32px 0px;
         backdrop-filter: blur(4px);
         color: #fff;
@@ -99,6 +99,7 @@
         font-weight: bold;
         line-height: 2.3;
         font-size: .8rem;
+        margin: 0 .3rem;
       }
     }
   }
